--- a/templates/default/Show Thread Templates/showthread_similarthreads_bit.html
+++ b/templates/default/Show Thread Templates/showthread_similarthreads_bit.html
@@ -1,7 +1,7 @@
 <tr>
 	<td class="{$trow}">{$similar_thread['threadprefix']}<a href="{$similar_thread['threadlink']}">{$similar_thread['subject']}</a></td>
 	<td align="center" class="{$trow}">{$similar_thread['profilelink']}</td>
-	<td align="center" class="{$trow}"><a href="javascript:MyBB.whoPosted({$similar_thread['tid']});">{$similar_thread['replies']}</a></td>
+	<td align="center" class="{$trow}"><a href="{$mybb->settings['bburl']}/misc.php?action=whoposted&tid={$similar_thread['tid']}" onclick="MyBB.whoPosted({$similar_thread['tid']}); return false;">{$similar_thread['replies']}</a></td>
 	<td align="center" class="{$trow}">{$similar_thread['views']}</td>
 	<td class="{$trow}" style="white-space: nowrap">
 		<span class="smalltext">{$lastpostdate}<br />
