--- a/templates/default/Post Bit Templates/postbit_attachments_attachment.html
+++ b/templates/default/Post Bit Templates/postbit_attachments_attachment.html
@@ -1,1 +1,1 @@
-<br />{$attachment['icon']}&nbsp;&nbsp;<a class="attachembed" href="attachment.php?aid={$attachment['aid']}" target="_blank" title="{$attachdate}">{$attachment['filename']}</a> ({$lang->postbit_attachment_size} {$attachment['filesize']} )
+<br /><a class="attachembed" href="attachment.php?aid={$attachment['aid']}" target="_blank" title="{$attachdate}">{$attachment['filename']}</a> ({$lang->postbit_attachment_size} {$attachment['filesize']} )
