--- a/templates/default/Edit Post Templates/editpost.html
+++ b/templates/default/Edit Post Templates/editpost.html
@@ -2,10 +2,7 @@
 <head>
 <title>{$mybb->settings['bbname']} - {$lang->edit_post}</title>
 {$headerinclude}
-		<link rel="stylesheet" href="{$mybb->asset_url}/jscripts/myproattach.css" type="text/css" media="screen" />
-	<script type="text/javascript" src="{$mybb->asset_url}/jscripts/jquery.form.js"></script>
-	<script type="text/javascript" src="{$mybb->asset_url}/jscripts/myproattach.js"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/post.js?ver=1800"></script>
+{$post_javascript}
 </head>
 <body>
 {$header}
@@ -26,36 +23,24 @@
 <td class="trow2">{$prefixselect}<input type="text" class="textbox" name="subject" size="40" maxlength="85" value="{$subject}" tabindex="1" /></td>
 </tr>
 <tr>
-<td class="trow2" valign="top"><strong>{$lang->your_message}:</strong><br /></td>
+<td class="trow2" valign="top"><strong>{$lang->your_message}:</strong><br /><div style="text-align: center;">{$smilieinserter}</div></td>
 <td class="trow2">
 <textarea name="message" id="message" rows="20" cols="70" tabindex="3">{$message}</textarea>
 {$codebuttons}
 </td>
 </tr>
 {$editreason}
-<tr>
-<td class="trow2" valign="top"><strong>{$lang->post_options}</strong></td>
-<td class="trow2"><span class="smalltext">
-<label><input type="checkbox" class="checkbox" name="postoptions[signature]" value="1" tabindex="6"{$postoptionschecked['signature']} /> {$lang->options_sig}</label>
-{$disablesmilies}</span>
-</td>
-</tr>
+{$postoptions}
 {$subscriptionmethod}
-{$pollbox}
+{$pollbox}{$ougc_adminpostedit}
 </table>
+{$attachbox}
 <br />
 <div align="center"><input type="submit" class="button" name="submitbutton" value="{$lang->update_post}" tabindex="3" accesskey="s" />  <input type="submit" class="button" name="previewpost" value="{$lang->preview_post}" tabindex="4" /></div>
 <input type="hidden" name="action" value="do_editpost" />
 <input type="hidden" name="attachmentaid" value="" />
 <input type="hidden" name="attachmentact" value="" />
-{$attachbox}
-</form>	
-{$upload_panel}
+</form>
 {$footer}
-<script type="text/javascript">
-	$(".author_avatar img").error(function () {
-		$(this).unbind("error").closest('.author_avatar').remove();
-	});
-</script>
 </body>
 </html>
