--- a/templates/default/Ungrouped Templates/codebuttons.html
+++ b/templates/default/Ungrouped Templates/codebuttons.html
@@ -1,17 +1,15 @@
 <link rel="stylesheet" href="{$mybb->asset_url}/jscripts/sceditor/editor_themes/{$theme['editortheme']}" type="text/css" media="all" />
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/sceditor/jquery.sceditor.bbcode.min.js?ver=1805"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/bbcodes_sceditor.js?ver=1808"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/mywrap.min.js?ver=1808"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/spoiler.js?ver=1804"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/sceditor/editor_plugins/undo.js?ver=1805"></script>
-
-{$lang->mentionme_codebutton}<script type="text/javascript">
+<script type="text/javascript" src="{$mybb->asset_url}/jscripts/sceditor/jquery.sceditor.bbcode.min.js?ver=1820"></script>
+<script type="text/javascript" src="{$mybb->asset_url}/jscripts/bbcodes_sceditor.js?ver=1819"></script>
+<script type="text/javascript" src="{$mybb->asset_url}/jscripts/sceditor/editor_plugins/undo.js?ver=1820"></script>
+<script type="text/javascript">
 var partialmode = {$mybb->settings['partialmode']},
 opt_editor = {
 	plugins: "bbcode,undo",
-	style: "{$mybb->asset_url}/jscripts/sceditor/textarea_styles/jquery.sceditor.{$theme['editortheme']}?ver=1808",
+	style: "{$mybb->asset_url}/jscripts/sceditor/textarea_styles/jquery.sceditor.{$theme['editortheme']}?ver=1820",
 	rtl: {$lang->settings['rtl']},
 	locale: "mybblang",
+	width: "100%",
 	enablePasteFiltering: true,
 	autoUpdate: true,
 	emoticonsEnabled: {$emoticons_enabled},
@@ -30,7 +28,7 @@ opt_editor = {
 		}
 	},
 	emoticonsCompat: true,
-	toolbar: "{$basic1}{$align}{$font}{$size}{$color}{$removeformat}{$basic2}image,{$email}{$link},wrap,spoiler|video{$emoticon}|{$list}{$code}quote|maximize,source",
+	toolbar: "{$basic1}{$align}{$font}{$size}{$color}{$removeformat}{$basic2}image,{$email}{$link}|video{$emoticon}|{$list}{$code}quote|maximize,source",
 };
 {$editor_language}
 $(function() {
