--- a/templates/default/New Reply Templates/newreply.html
+++ b/templates/default/New Reply Templates/newreply.html
@@ -2,14 +2,10 @@
 <head>
 <title>{$lang->post_reply_to}</title>
 {$headerinclude}
-			<link rel="stylesheet" href="{$mybb->asset_url}/jscripts/myproattach.css" type="text/css" media="screen" />
-	<script type="text/javascript" src="{$mybb->asset_url}/jscripts/jquery.form.js"></script>
-	<script type="text/javascript" src="{$mybb->asset_url}/jscripts/myproattach.js"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/post.js?ver=1800"></script>
+{$post_javascript}
 </head>
 <body>
 {$header}
-
 {$preview}
 {$maximageserror}
 {$attacherror}
@@ -30,24 +26,19 @@
 <td class="trow2"><input type="text" class="textbox" name="subject" size="40" maxlength="85" value="{$subject}" tabindex="1" /></td>
 </tr>
 <tr>
-<td class="trow2" valign="top"><strong>{$lang->your_message}</strong></td>
+<td class="trow2" valign="top"><strong>{$lang->your_message}</strong><br />{$smilieinserter}</td>
 <td class="trow2">
 <textarea id="message" name="message" rows="20" cols="70" tabindex="2" >{$message}</textarea>
 {$codebuttons}
 {$multiquote_external}
 </td>
 </tr>
-<tr>
-<td class="trow1" valign="top"><strong>{$lang->post_options}</strong></td>
-<td class="trow1"><span class="smalltext">
-<label><input type="checkbox" class="checkbox" name="postoptions[signature]" value="1" tabindex="6"{$postoptionschecked['signature']} /> {$lang->options_sig}</label>
-{$disablesmilies}
-</span></td>
-</tr>
+{$postoptions}
 {$modoptions}
 {$subscriptionmethod}
 {$captcha}
 </table>
+{$attachbox}
 <br />
 <div align="center"><input type="submit" class="button" name="submit" value="{$lang->post_reply}" tabindex="3" accesskey="s" />  <input type="submit" class="button" name="previewpost" value="{$lang->preview_post}" tabindex="4" />{$savedraftbutton}</div>
 <input type="hidden" name="action" value="do_newreply" />
@@ -57,18 +48,10 @@
 <input type="hidden" name="attachmentact" value="" />
 <input type="hidden" name="quoted_ids" value="{$quoted_ids}" />
 <input type="hidden" name="tid" value="{$tid}" />
-{$attachbox}	
 {$editdraftpid}
 </form>
-{$upload_panel}
-
 {$forumrules}
 {$threadreview}
 {$footer}
-<script type="text/javascript">
-	$(".author_avatar img").error(function () {
-		$(this).unbind("error").closest('.author_avatar').remove();
-	});
-</script>
 </body>
 </html>
