--- a/templates/default/New Thread Templates/newthread.html
+++ b/templates/default/New Thread Templates/newthread.html
@@ -2,10 +2,7 @@
 <head>
 <title>{$lang->newthread_in}</title>
 {$headerinclude}
-		<link rel="stylesheet" href="{$mybb->asset_url}/jscripts/myproattach.css" type="text/css" media="screen" />
-	<script type="text/javascript" src="{$mybb->asset_url}/jscripts/jquery.form.js"></script>
-	<script type="text/javascript" src="{$mybb->asset_url}/jscripts/myproattach.js"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/post.js?ver=1800"></script>
+{$post_javascript}
 </head>
 <body>
 {$header}
@@ -24,25 +21,22 @@
 <td class="trow2" width="20%"><strong>{$lang->thread_subject}</strong></td>
 <td class="trow2">{$prefixselect}<input type="text" class="textbox" name="subject" size="40" maxlength="85" value="{$subject}" tabindex="1" /></td>
 </tr>
+{$posticons}
 <tr>
-<td class="trow2" valign="top"><strong>{$lang->your_message}</strong></td>
+<td class="trow2" valign="top"><strong>{$lang->your_message}</strong>{$smilieinserter}</td>
 <td class="trow2">
 <textarea name="message" id="message" rows="20" cols="70" tabindex="2">{$message}</textarea>
 {$codebuttons}
 {$multiquote_external}
 </td>
 </tr>
-<tr>
-<td class="trow1" valign="top"><strong>{$lang->post_options}</strong></td>
-<td class="trow1"><span class="smalltext">
-<label><input type="checkbox" class="checkbox" name="postoptions[signature]" value="1" tabindex="7"{$postoptionschecked['signature']} /> {$lang->options_sig}</label>
-{$disablesmilies}</span></td>
-</tr>
+{$postoptions}
 {$modoptions}
 {$subscriptionmethod}
 {$pollbox}
 {$captcha}
 </table>
+{$attachbox}
 <br />
 <div style="text-align:center"><input type="submit" class="button" name="submit" value="{$lang->post_thread}" tabindex="4" accesskey="s" />  <input type="submit" class="button" name="previewpost" value="{$lang->preview_post}" tabindex="5" />{$savedraftbutton}</div>
 <input type="hidden" name="action" value="do_newthread" />
@@ -52,17 +46,8 @@
 <input type="hidden" name="quoted_ids" value="{$quoted_ids}" />
 <input type="hidden" name="tid" value="{$tid}" />
 {$editdraftpid}
-
-{$attachbox}
 </form>
-{$upload_panel}
-
 {$forumrules}
 {$footer}
-<script type="text/javascript">
-	$(".author_avatar img").error(function () {
-		$(this).unbind("error").closest('.author_avatar').remove();
-	});
-</script>
 </body>
 </html>
