--- a/templates/default/Portal Templates/portal.html
+++ b/templates/default/Portal Templates/portal.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>{$mybb->settings['bbname']}</title>
+<link rel="alternate" type="application/rss+xml" title="{$lang->latest_announcements} (RSS 2.0)" href="{$mybb->settings['bburl']}/syndication.php?portal=1" />
+<link rel="alternate" type="application/atom+xml" title="{$lang->latest_announcements} (Atom 1.0)" href="{$mybb->settings['bburl']}/syndication.php?portal=1&type=atom1.0" />
+{$headerinclude}
 {$headerinclude}
 </head>
 <body  onload=pics()>
@@ -17,6 +20,7 @@
 <td>&nbsp;</td>
 <td valign="top">
 {$announcements}
+{$multipage}
 </td>
 </tr>
 </table>
