--- a/templates/default/Post Bit Templates/postbit_author_user.html
+++ b/templates/default/Post Bit Templates/postbit_author_user.html
@@ -1,5 +1,5 @@
-{$lang->postbit_posts} {$post['postnum']}<br />
+	{$lang->postbit_posts} {$post['postnum']}<br />
 	Thanks received: {$post['tyl_unumrcvtyls']}<br />
 	Thanks given: {$post['tyl_unumtyls']}<br />
 	{$lang->postbit_joined} {$post['userregdate']}<br />
-	{$post['replink']}{$post['warninglevel']}
+	{$post['replink']}{$post['profilefield']}{$post['warninglevel']}
