--- a/templates/default/Post Templates/post_attachments_attachment.html
+++ b/templates/default/Post Templates/post_attachments_attachment.html
@@ -1,5 +1,5 @@
-<tr>
-<td class="trow2" width="1" align="center"><img src="{$mybb->settings['uploadspath']}/{$attachment['thumbnail']}" class="attachment" alt="{$attachment['filename']} thumbnail" title="{$attachment['filename']}" /></td>
+<tr  id="attachment_{$attachment['aid']}">
+<td class="trow2" width="1" align="center"><img src="{$mybb->settings['uploadspath']}/{$attachment['thumbnail']}" class="attachment" alt="{$attachment['filename']}" title="{$attachment['filename']}" /></td>
 <td class="trow2" width="60%" style="white-space: nowrap">{$attachment['filename']} ({$attachment['size']})</td>
 <td class="trow2" style="white-space: nowrap; text-align: center;">{$attach_mod_options} {$attach_rem_options} {$postinsert}</td>
 </tr>
