--- a/templates/default/Show Thread Templates/showthread.html
+++ b/templates/default/Show Thread Templates/showthread.html
@@ -20,13 +20,13 @@
 	lang.editreason = "{$lang->postbit_editreason}";
 	lang.post_deleted_error = "{$lang->post_deleted_error}";
 	lang.softdelete_thread = "{$lang->soft_delete_thread}";
-	lang.restore_thread = "{$lang->restore_thread}";	
+	lang.restore_thread = "{$lang->restore_thread}";
 // -->
 </script>
 <!-- jeditable (jquery) -->
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/report.js?ver=1804"></script>
+<script type="text/javascript" src="{$mybb->asset_url}/jscripts/report.js?ver=1820"></script>
 <script src="{$mybb->asset_url}/jscripts/jeditable/jeditable.min.js"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/thread.js?ver=1813"></script>
+<script type="text/javascript" src="{$mybb->asset_url}/jscripts/thread.js?ver=1820"></script>
 
 <script type="text/javascript">
 <!--
@@ -71,6 +71,17 @@ var form_name = '{$mybb->settings['fastQuoteFormName']}';
 var text_name = '{$mybb->settings['fastQuoteFieldName']}';
 </script>
 <!-- end: FastQuote -->
+<script type="text/javascript" src="{$mybb->settings['bburl']}/jscripts/thankyoulike.min.js"></script>
+<script type="text/javascript">
+<!--
+	var tylEnabled = "{$mybb->settings['g33k_thankyoulike_enabled']}";
+	var tylDisplayGrowl = "{$mybb->settings['g33k_thankyoulike_displaygrowl']}";
+	var tylCollapsible = "{$mybb->settings['g33k_thankyoulike_collapsible']}";
+	var tylUser = "{$mybb->user['uid']}";
+	var tylSend = "{$lang->tyl_send}";
+	var tylRemove = "{$lang->tyl_remove}";
+// -->
+</script>
 <script type="text/javascript" src="{$mybb->settings['bburl']}/jscripts/thankyoulike.min.js"></script>
 <script type="text/javascript">
 <!--
@@ -155,15 +166,12 @@ var text_name = '{$mybb->settings['fastQuoteFieldName']}';
 	// -->
 	</script>
 	<script type="text/javascript">
-		$(".author_avatar img").error(function () {
-			$(this).unbind("error").closest('.author_avatar').remove();
-		});
 		var thread_deleted = "{$thread_deleted}";
 		if(thread_deleted == "1")
 		{
 			$("#quick_reply_form, .new_reply_button, .thread_tools, .inline_rating").hide();
 			$("#moderator_options_selector option.option_mirage").attr("disabled","disabled");
-		}		
+		}
 	</script>
 <div id="text_right"><div id="elist"></div></div>	
 	
