--- a/templates/default/User Control Panel Templates/usercp_nav.html
+++ b/templates/default/User Control Panel Templates/usercp_nav.html
@@ -3,9 +3,7 @@
 	<tr>
 		<td class="thead"><strong>{$lang->ucp_nav_menu}</strong></td>
 	</tr>
-	<tr>
-		<td class="trow1 smalltext"><a href="usercp.php" class="usercp_nav_item usercp_nav_home">{$lang->ucp_nav_home}</a></td>
-	</tr>
+{$ucp_nav_home}
 {$usercpmenu}
 <tr>
 	<td class="tcat">
