--- a/templates/default/Show Thread Templates/showthread.html
+++ b/templates/default/Show Thread Templates/showthread.html
@@ -28,13 +28,6 @@
 <script src="{$mybb->asset_url}/jscripts/jeditable/jeditable.min.js"></script>
 <script type="text/javascript" src="{$mybb->asset_url}/jscripts/thread.js?ver=1820"></script>
 
-<script type="text/javascript">
-<!--
-	var tylEnabled = "{$mybb->settings['g33k_thankyoulike_enabled']}";
-	var tylCollapsible = "{$mybb->settings['g33k_thankyoulike_collapsible']}";
-	var tylUser = "{$mybb->user['uid']}";
--->
-</script>
 <!-- start: FastQuote -->
 <script type="text/javascript" src="{$mybb->asset_url}/jscripts/fastQuote.js"></script>
 <script type="text/javascript">
@@ -42,46 +35,10 @@ var form_name = '{$mybb->settings['fastQuoteFormName']}';
 var text_name = '{$mybb->settings['fastQuoteFieldName']}';
 </script>
 <!-- end: FastQuote -->
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/thankyoulike.js"></script>
-<script type="text/javascript">
-<!--
-	var tylEnabled = "{$mybb->settings['g33k_thankyoulike_enabled']}";
-	var tylDisplayGrowl = "{$mybb->settings['g33k_thankyoulike_displaygrowl']}";
-	var tylCollapsible = "{$mybb->settings['g33k_thankyoulike_collapsible']}";
-	var tylUser = "{$mybb->user['uid']}";
-	var tylSend = "{$lang->tyl_send}";
-	var tylRemove = "{$lang->tyl_remove}";
-// -->
-</script>
-<script type="text/javascript" src="{$mybb->settings['bburl']}/jscripts/thankyoulike.min.js"></script>
-<script type="text/javascript">
-<!--
-	var tylEnabled = "{$mybb->settings['g33k_thankyoulike_enabled']}";
-	var tylDisplayGrowl = "{$mybb->settings['g33k_thankyoulike_displaygrowl']}";
-	var tylCollapsible = "{$mybb->settings['g33k_thankyoulike_collapsible']}";
-	var tylUser = "{$mybb->user['uid']}";
-	var tylSend = "{$lang->tyl_send}";
-	var tylRemove = "{$lang->tyl_remove}";
-// -->
-</script>
-{$mention_script}<!-- start: FastQuote -->
-<script type="text/javascript" src="jscripts/fastQuote.js"></script>
-<script type="text/javascript">
-var form_name = '{$mybb->settings['fastQuoteFormName']}';
-var text_name = '{$mybb->settings['fastQuoteFieldName']}';
-</script>
-<!-- end: FastQuote -->
-<script type="text/javascript" src="{$mybb->settings['bburl']}/jscripts/thankyoulike.min.js"></script>
-<script type="text/javascript">
-<!--
-	var tylEnabled = "{$mybb->settings['g33k_thankyoulike_enabled']}";
-	var tylDisplayGrowl = "{$mybb->settings['g33k_thankyoulike_displaygrowl']}";
-	var tylCollapsible = "{$mybb->settings['g33k_thankyoulike_collapsible']}";
-	var tylUser = "{$mybb->user['uid']}";
-	var tylSend = "{$lang->tyl_send}";
-	var tylRemove = "{$lang->tyl_remove}";
-// -->
-</script>
+
+{$mention_script}
+	
+
 <script type="text/javascript" src="{$mybb->settings['bburl']}/jscripts/thankyoulike.min.js"></script>
 <script type="text/javascript">
 <!--
