--- a/templates/default/Post Bit Templates/postbit.html
+++ b/templates/default/Post Bit Templates/postbit.html
@@ -13,7 +13,7 @@
 		{$post['user_details']}
 	</div>
 </div>
-<div class="post_content">
+<div class="post_content{$post['styleclass']}">
 	<div class="post_head">
 		{$post['posturl']}
 		<span class="post_date">{$post['postdate']} <span class="post_edit" id="edited_by_{$post['pid']}">{$post['editedmsg']}{$post['edithistory']}</span></span>
