--- a/templates/default/Index Page Templates/index.html
+++ b/templates/default/Index Page Templates/index.html
@@ -9,7 +9,7 @@
 // -->
 </script>
 </head>
-<body  onload=pics()>
+<body>
 {$header}
 {$itph}	
 <table width="100%"  border="0">
@@ -22,6 +22,8 @@
 <br class="clear" />	
 {$boardstats}
 {$footer}
-<div id="text_right"><div id="elist"></div></div>
+<div id="text_right"><div id="elist">
+		<?php include ($_SERVER["DOCUMENT_ROOT"]."/lib/eget.php"); ?>
+</div></div>
 </body>
 </html>
