Removed warning level

--- a/templates/default/Post Bit Templates/postbit_author_user.html
+++ b/templates/default/Post Bit Templates/postbit_author_user.html
@@ -2,4 +2,4 @@
 	Thanks received: {$post['tyl_unumrcvtyls']}<br />
 	Thanks given: {$post['tyl_unumtyls']}<br />
 	{$lang->postbit_joined} {$post['userregdate']}<br />
-	{$post['replink']}{$post['profilefield']}{$post['warninglevel']}
+	{$post['replink']}{$post['profilefield']}
