Removed online status

--- a/templates/default/Post Bit Templates/postbit_classic.html
+++ b/templates/default/Post Bit Templates/postbit_classic.html
@@ -4,7 +4,7 @@
 <div class="post_author scaleimages">
 	{$post['useravatar']}
 	<div class="author_information">
-			<strong><span class="largetext">{$post['profilelink']}</span></strong> {$post['onlinestatus']}<br />
+			<strong><span class="largetext">{$post['profilelink']}</span></strong><br />
 			<span class="smalltext">
 				{$post['usertitle']}<br />
 			</span>
@@ -13,7 +13,7 @@
 		{$post['user_details']}
 	</div>
 </div>
-<div class="post_content{$post['styleclass']}">
+<div class="post_content ">
 	<div class="post_head">
 		{$post['posturl']}
 		<span class="post_date">{$post['postdate']} <span class="post_edit" id="edited_by_{$post['pid']}">{$post['editedmsg']}{$post['edithistory']}</span></span>
