--- a/templates/default/Post Bit Templates/postbit_attachments_images_image.html
+++ b/templates/default/Post Bit Templates/postbit_attachments_images_image.html
@@ -1,3 +1,3 @@
-<img src="attachment.php?aid={$attachment['aid']}" class="attachment" alt="" title="{$lang->postbit_attachment_filename} {$attachment['filename']}
+<img src="{$mybb->settings['uploadspath']}/{$attachment['thumbnail']}"  loading="lazy"  class="attachment" alt="{$attachment['filename']}" title="{$lang->postbit_attachment_filename} {$attachment['filename']}
 {$lang->postbit_attachment_size} {$attachment['filesize']}
 {$attachdate}" />&nbsp;&nbsp;&nbsp;
