--- a/templates/default/Forum Display Templates/forumdisplay_thread.html
+++ b/templates/default/Forum Display Templates/forumdisplay_thread.html
@@ -1,13 +1,13 @@
 <tr class="inline_row">
-	<td align="center" class="{$bgcolor}{$thread_type_class}" width="2%"><span class="thread_status {$folder}" title="{$folder_label}">&nbsp;</span></td>
+	<td align="center" class="{$bgcolor}{$thread_type_class}" width="2%">{$mylast}<span class="thread_status {$folder}" title="{$folder_label}{$mylast_tip}">&nbsp;</span>{$mylast_cl}</td>
 	<td class="{$bgcolor}{$thread_type_class}">
-		{$attachment_count}
+		{$tyl_forumdisplay_thread_var}{$attachment_count}
 		<div>
           <span>{$prefix} {$gotounread}{$thread['threadprefix']}<span class="{$inline_edit_class} {$new_class}" id="tid_{$inline_edit_tid}"><a href="{$thread['threadlink']}">{$thread['subject']}</a></span>{$thread['multipage']}</span>
-			<div class="author smalltext">{$thread['profilelink']}</div>
+			<div><span class="author smalltext">{$thread['profilelink']}{$lang->comma}</span><span class="thread_start_datetime smalltext">{$thread['start_datetime']}</span></div>
 		</div>
 	</td>
-	<td align="center" class="{$bgcolor}{$thread_type_class}"><a href="javascript:MyBB.whoPosted({$thread['tid']});">{$thread['replies']}</a>{$unapproved_posts}</td>
+	<td align="center" class="{$bgcolor}{$thread_type_class}"><a href="{$mybb->settings['bburl']}/misc.php?action=whoposted&tid={$thread['tid']}" onclick="MyBB.whoPosted({$thread['tid']}); return false;">{$thread['replies']}</a>{$unapproved_posts}</td>
 	<td align="center" class="{$bgcolor}{$thread_type_class}">{$thread['views']}</td>
 	<td class="{$bgcolor}{$thread_type_class}" style="white-space: nowrap; text-align: right;">
 		<span class="lastpost smalltext">{$lastpostdate}<br />
