--- a/templates/default/Header Templates/header_welcomeblock_member.html
+++ b/templates/default/Header Templates/header_welcomeblock_member.html
@@ -4,12 +4,10 @@
 </div>
 <div class="lower">
 	<div class="wrapper">
-		<ul class="menu panel_links">
+		<ul class="menu panel_links user_links">
 			{$usercplink}
 			{$myalerts_headericon}{$modcplink}
 			{$admincplink}
-		</ul>
-			<ul class="menu user_links">
 			{$buddylink}
 			{$searchlink}
 			{$pmslink}
