Removed fixed table column width

--- a/templates/default/Forum Bit Templates/forumbit_depth1_cat.html
+++ b/templates/default/Forum Bit Templates/forumbit_depth1_cat.html
@@ -9,9 +9,9 @@
 <tbody style="{$expdisplay}" id="cat_{$forum['fid']}_e">
 <tr>
 <td class="tcat" colspan="2"><span class="smalltext"><strong>{$lang->forumbit_forum}</strong></span></td>
-<td class="tcat" width="85" align="center" style="white-space: nowrap"><span class="smalltext"><strong>{$lang->forumbit_threads}</strong></span></td>
-<td class="tcat" width="85" align="center" style="white-space: nowrap"><span class="smalltext"><strong>{$lang->forumbit_posts}</strong></span></td>
-<td class="tcat" width="200" align="center"><span class="smalltext"><strong>{$lang->forumbit_lastpost}</strong></span></td>
+<td class="tcat" align="center" style="white-space: nowrap"><span class="smalltext"><strong>{$lang->forumbit_threads}</strong></span></td>
+<td class="tcat" align="center" style="white-space: nowrap"><span class="smalltext"><strong>{$lang->forumbit_posts}</strong></span></td>
+<td class="tcat"  align="center"><span class="smalltext"><strong>{$lang->forumbit_lastpost}</strong></span></td>
 </tr>
 {$sub_forums}
 </tbody>
