--- a/templates/default/Ungrouped Templates/headerinclude.html
+++ b/templates/default/Ungrouped Templates/headerinclude.html
@@ -2,25 +2,22 @@
 <link rel="alternate" type="application/atom+xml" title="{$lang->latest_threads} (Atom 1.0)" href="{$mybb->settings['bburl']}/syndication.php?type=atom1.0" />
 <link rel="stylesheet" type="text/css" href="/menu-style.css" />
 <link rel="icon" type="image/png" href="/favicon.png" />
-<link rel="preload" href="images/forum_icon_sprite.png" as="image" >
-<link rel="preload" href="images/headerlinks_sprite.png" as="image" >
-<link rel="preload" href="images/buttons_sprite.png" as="image" >
-<link rel="preload" href="images/showthread_sprite.png" as="image" >
-<link rel="preload" href="images/jump.png" as="image" >
-<link rel="preload" href="games/images/games.png" as="image" >
 
+<meta name="viewport" content="width=930px">
 <meta http-equiv="Content-Type" content="text/html; charset={$charset}" />
 <meta http-equiv="Content-Script-Type" content="text/javascript" />
 <script type="text/javascript" src="{$mybb->asset_url}/jscripts/jquery.js?ver=1823"></script>
 <script type="text/javascript" src="{$mybb->asset_url}/jscripts/jquery.plugins.min.js?ver=1821"></script>
-<script type="text/javascript" src="{$mybb->asset_url}/jscripts/general.js?ver=1821"></script>
+<script type="text/javascript" src="{$mybb->asset_url}/jscripts/general.js?ver=1827"></script>
 
 {$stylesheets}
 
 <script type="text/javascript">
 <!--
 	lang.unknown_error = "{$lang->unknown_error}";
-
+	lang.confirm_title = "{$lang->confirm_title}";
+	lang.expcol_collapse = "{$lang->expcol_collapse}";
+	lang.expcol_expand = "{$lang->expcol_expand}";
 	lang.select2_match = "{$lang->select2_match}";
 	lang.select2_matches = "{$lang->select2_matches}";
 	lang.select2_nomatches = "{$lang->select2_nomatches}";
